--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt/br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,5 +9,9 @@
 </head>
 <body>
 <h1>vai ser uma imagem aqui</h1>
+<ul>
+    <li>estudante</li>
+    <li>escola</li>
+</ul>
 </body>
 </html>
